--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <head>
     <meta charset="utf-8">
-    <title> Projecte web demo </title>
+    <title> Projecte web demo.</title>
   </head>
   
   <body>
