--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<body>
 		<header id="main-header">
 			<a id="logo-header" href="#">
-				<img src="images/Logo1.png" alt="logo">				
+				<img src="Logo1.png" alt="logo">				
 			</a>
 		</header>
 
