--- a/prytz.html
+++ b/prytz.html
@@ -32,18 +32,26 @@
 	<body>
 		<header id="main-header">
 			<a id="logo-header" href="#">
-				<img src="Images\Logo1.png" alt="logo">				
+				<img src="Images/Logo1.png" alt="logo">				
 			</a>
 		</header>
 
 		<header id="secondary-header">
 			<nav>
 				<div id="mobile-menu">
-				<ul>
+				<ul class="menu-navigation">
 					<li><a href="home.html" target="iframe-content">Inici</a></li>
 					<li><a href="about.html" target="iframe-content">Qui sóm</a></li>
 					<li><a href="service.html" target="iframe-content">Servei tècnic</a></li>	
-					<li><a href="shop.html" target="iframe-content">Venta</a></li>	
+					<li><a href="shop.html" target="iframe-content">Venta</a>
+						<ul>
+							<li><a href="Balances.html" target="iframe-content">Balances</a></li>
+						</ul
+						<ul>
+						
+							<li><a href="Bascules.html" target="iframe-content">Bàscules</a></li>
+						</ul>
+					</li>	
 					<li><a href="contact.html" target="iframe-content">On ens pots trobar</a></li>								
 				</ul>
 				</div>
