--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<header id="main-header">
 			<a id="logo-header" href="#">
 				<picture>
-  					<source media="(max-width: 1000px)" srcset="Images/Logo1-mob.png" alt="logo">  					
+  					<source media="(max-width: 1000px)" srcset="Images/Logo1-mob.png">  					
   					<img src="Images/Logo1.png" alt="logo">
 				</picture>
 			</a>
