--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
 		<header id="main-header">
 			<a id="logo-header" href="#">
 				<picture>
-  					<source media="(max-width: 1000px)" srcset="Images/Logo1-mob.png">  					
+  					<source media="(max-width: 1000px)" srcset="Images/Logo1-mob.png">  	
   					<img src="Images/Logo1.png" alt="logo">
 				</picture>
 			</a>
+		</header>
+
+		<header id="language-header">		
+			<nav>
+					<ul>
+						<li><a class="language" href="#"><img src="Images/Cat.png" alt="Català"></a></li>
+						<li><a class="language" href="Esp/index.html"><img src="Images/Esp.png" alt="Español"></a></li>
+					</ul>	
+			</nav>		
 		</header>
 
 		<header id="secondary-header">
