--- a/Esp/Index_es.html
+++ b/Esp/Index_es.html
@@ -68,7 +68,7 @@
 		<div id="cookiesBox">
 			<p>
 				Este sitio web utiliza cookies, si permanece en esta página acepta su uso.
-				Puede leer más sobre el uso de cookies en nuestra <a href="legal.html" target="iframe-content">política de privacidad</a>.
+				Puede leer más sobre el uso de cookies en nuestra <a href="legal_es.html" target="iframe-content">política de privacidad</a>.
 			</p>
 			<p>
 				<button onclick="acceptCookies()" class="pull-right"><i class="fa fa-times"></i>Aceptar</button>				
