--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<nav>
 					<ul>
 						<li><a class="language" href="#"><img src="Images/Cat.png" alt="Català"></a></li>
-						<li><a class="language" href="/Esp/index_es.html"><img src="Images/Esp.png" alt="Español"></a></li>
+						<li><a class="language" href="Esp/index_es.html"><img src="Images/Esp.png" alt="Español"></a></li>
 					</ul>	
 			</nav>		
 		</header>
@@ -68,7 +68,7 @@
 		<div id="cookiesBox">
 			<p>
 				Aquest lloc web utilitza cookies, si roman en aquesta pàgina n'accepta el seu ús.
-				Pot llegir més sobre l'ús de cookies en la nostra <a href="legal.html" target="iframe-content">política de privacitad</a>.
+				Pot llegir més sobre l'ús de cookies en la nostra <a href="legal.html" target="iframe-content">política de privacitat</a>.
 			</p>
 			<p>
 				<button onclick="acceptCookies()" class="pull-right"><i class="fa fa-times"></i>Acceptar</button>				
