--- a/Esp/Index_es.html
+++ b/Esp/Index_es.html
@@ -76,7 +76,7 @@
 		</div>
 
 		<footer id="secondary-footer">
-			<p><a href="legal.html" target="iframe-content">Política de privacidat y cookies</a></p>
+			<p><a href="legal_es.html" target="iframe-content">Política de privacidad y cookies</a></p>
 		</footer>
 
 		<footer id="main-footer">
