--- a/Esp/legal_es.html
+++ b/Esp/legal_es.html
@@ -11,7 +11,7 @@
 	<body>
 		<section id="main-content">
 				<header>
-					<h1 id="page-titles">Política de privacitat i cookies</h1>
+					<h1 id="page-titles">Política de privacidad y cookies</h1>
 				</header>
 			
 
