--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div id="cookiesBox">
 			<p>
 				Aquest lloc web utilitza cookies, si roman en aquesta pàgina n'accepta el seu ús.
-				Pot llegir més sobre l'ús de cookies en la nostra <a href="legal.html" target="iframe-content">política de privacitad</a>.
+				Pot llegir més sobre l'ús de cookies en la nostra <a href="legal.html" target="iframe-content">política de privacitat</a>.
 			</p>
 			<p>
 				<button onclick="acceptCookies()" class="pull-right"><i class="fa fa-times"></i>Acceptar</button>				
