--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<nav>
 					<ul>
 						<li><a class="language" href="#"><img src="Images/Cat.png" alt="Català"></a></li>
-						<li><a class="language" href="Esp/index_es.html"><img src="Images/Esp.png" alt="Español"></a></li>
+						<li><a class="language" href="index_es.html"><img src="Images/Esp.png" alt="Español"></a></li>
 					</ul>	
 			</nav>		
 		</header>
