--- a/about_es.html
+++ b/about_es.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ca">
 	<head>
 		<meta charset="utf-8" />
@@ -11,7 +11,7 @@
 	<body>
 		<section id="main-content">
 			<header>
-				<h1 id="page-titles">Pàgina Qui sóm</h1>
+				<h1 id="page-titles">Pàgina Qui som</h1>
 			</header>
 				
 			<img src="http://placekitten.com/800/250" alt="foto gat">
