--- a/service_es.html
+++ b/service_es.html
@@ -1,8 +1,8 @@
-﻿﻿<!DOCTYPE html>
-<html lang="ca">
+﻿<!DOCTYPE html>
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Bàscules, balances i equipament comercial Prytz Tarragona" />
+		<meta name="description" content="Básculas, balanzas y equipamiento comercial Prytz Tarragona" />
 		<meta name="keywords" content="HTML5, CSS3, Javascript" />
 			<title>Bàscules Prytz</title>
 				<link rel="stylesheet" href="Style.css" />
@@ -11,15 +11,14 @@
 	<body>
 		<section id="main-content">
 			<header>
-				<h1 id="page-titles">Pàgina Qui sóm</h1>
+				<h1 id="page-titles">Página de servicio técnico</h1>
 			</header>
 				
-			<img src="http://placekitten.com/800/250" alt="foto gat">
+			<img src="http://placekitten.com/800/250" alt="foto gato">
 
 			<div class="content">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
-			
 		</section>
 	</body>
 </html>
