--- a/about_es.html
+++ b/about_es.html
@@ -11,7 +11,7 @@
 	<body>
 		<section id="main-content">
 			<header>
-				<h1 id="page-titles">Página Quiénes somos eee</h1>
+				<h1 id="page-titles">Página Quiénes somos</h1>
 			</header>
 				
 			<img src="http://placekitten.com/800/250" alt="foto gato">
